@@ -98,7 +98,7 @@ export(subgraph, simplify, degree, degree.distribution, diameter,
        shortest.paths, minimum.spanning.tree, edge.betweenness,
        get.shortest.paths, average.path.length, transitivity,
        get.all.shortest.paths, get.diameter, farthest.nodes,
-       graph.laplacian, constraint, page.rank, reciprocity, rewire,
+       constraint, page.rank, reciprocity, rewire,
        graph.density, neighborhood.size, neighborhood, graph.neighborhood,
        graph.coreness, topological.sort, girth, is.loop, is.multiple,
        count.multiple)
