@@ -311,16 +311,17 @@ transitivity <- function(graph, type=c("undirected", "global", "globalundirected
   }
 }
 
-graph.laplacian <- function(graph, normalized=FALSE) {
+## Generated by stimulus now
+## graph.laplacian <- function(graph, normalized=FALSE) {
 
-  if (!is.igraph(graph)) {
-    stop("Not a graph object")
-  }
+##   if (!is.igraph(graph)) {
+##     stop("Not a graph object")
+##   }
   
-  on.exit( .Call("R_igraph_finalizer", PACKAGE="igraph") )
-  .Call("R_igraph_laplacian", graph, as.logical(normalized),
-        PACKAGE="igraph")
-}
+##   on.exit( .Call("R_igraph_finalizer", PACKAGE="igraph") )
+##   .Call("R_igraph_laplacian", graph, as.logical(normalized),
+##         PACKAGE="igraph")
+## }
   
 ## OLD implementation
 ## graph.laplacian <- function(graph, normalized=FALSE) {
