@@ -25,6 +25,148 @@
 #include "config.h"
 #include <math.h>
 
+int igraph_i_weighted_laplacian(const igraph_t *graph, igraph_matrix_t *res,
+				igraph_bool_t normalized, 
+				const igraph_vector_t *weights) {
+  
+  igraph_eit_t edgeit;
+  long int no_of_nodes=igraph_vcount(graph);
+  long int no_of_edges=igraph_ecount(graph);
+  igraph_bool_t directed=igraph_is_directed(graph);
+  igraph_vector_t degree;
+  long int i;
+  
+  if (igraph_vector_size(weights) != no_of_edges) {
+    IGRAPH_ERROR("Invalid edge weight vector length", IGRAPH_EINVAL);
+  }
+  
+  IGRAPH_CHECK(igraph_matrix_resize(res, no_of_nodes, no_of_nodes));
+  igraph_matrix_null(res);
+  
+  IGRAPH_CHECK(igraph_eit_create(graph, igraph_ess_all(0), &edgeit));
+  IGRAPH_FINALLY(igraph_eit_destroy, &edgeit);
+  
+  IGRAPH_VECTOR_INIT_FINALLY(&degree, no_of_nodes);
+  
+  if (directed) {
+    IGRAPH_WARNING("Computing (weighted) Laplacian of a directed graph");
+
+    if (!normalized) {
+
+      while (!IGRAPH_EIT_END(edgeit)) {
+	long int edge=IGRAPH_EIT_GET(edgeit);
+	long int from=IGRAPH_FROM(graph, edge);
+	long int to  =IGRAPH_TO  (graph, edge);
+	igraph_real_t weight=VECTOR(*weights)[edge];
+	if (from != to) {
+	  MATRIX(*res, from, to) -= weight;
+	  VECTOR(degree)[from] += weight;
+	}
+	IGRAPH_EIT_NEXT(edgeit);
+      }
+      
+      /* And the diagonal */
+      for (i=0; i<no_of_nodes; i++) {
+	MATRIX(*res, i, i) = VECTOR(degree)[i];
+      }
+
+    } else /* normalized */ {
+
+      while (!IGRAPH_EIT_END(edgeit)) {
+	long int edge=IGRAPH_EIT_GET(edgeit);
+	long int from=IGRAPH_FROM(graph, edge);
+	long int to  =IGRAPH_TO  (graph, edge);
+	igraph_real_t weight=VECTOR(*weights)[edge];
+	if (from != to) {
+	  VECTOR(degree)[from] += weight;
+	}
+	IGRAPH_EIT_NEXT(edgeit);
+      }
+
+      for (i=0; i<no_of_nodes; i++) {
+	MATRIX(*res, i, i) = VECTOR(degree)[i] > 0 ? 1 : 0;
+      }
+      
+      IGRAPH_EIT_RESET(edgeit);
+      while (!IGRAPH_EIT_END(edgeit)) {
+	long int edge=IGRAPH_EIT_GET(edgeit);
+	long int from=IGRAPH_FROM(graph, edge);
+	long int to  =IGRAPH_TO  (graph, edge);
+	igraph_real_t weight=VECTOR(*weights)[edge];
+	if (from != to) {
+	  MATRIX(*res, from, to) = 
+	    -1.0 / sqrt(VECTOR(degree)[from]);
+	}
+	IGRAPH_EIT_NEXT(edgeit);
+      }
+      
+    }
+
+  } else /* undirected */ {
+    
+    if (!normalized) {
+      
+      while (!IGRAPH_EIT_END(edgeit)) {
+	long int edge=IGRAPH_EIT_GET(edgeit);
+	long int from=IGRAPH_FROM(graph, edge);
+	long int to  =IGRAPH_TO  (graph, edge);
+	igraph_real_t weight=VECTOR(*weights)[edge];
+	if (from != to) {
+	  MATRIX(*res, from, to) -= weight;
+	  MATRIX(*res, to, from) -= weight;
+	  VECTOR(degree)[from] += weight;
+	  VECTOR(degree)[to] += weight;
+	}
+	IGRAPH_EIT_NEXT(edgeit);
+      }
+      
+      /* And the diagonal */
+      for (i=0; i<no_of_nodes; i++) {
+	MATRIX(*res, i, i) = VECTOR(degree)[i];
+      }
+      
+    } else /* normalized */ {
+     
+      while (!IGRAPH_EIT_END(edgeit)) {
+	long int edge=IGRAPH_EIT_GET(edgeit);
+	long int from=IGRAPH_FROM(graph, edge);
+	long int to  =IGRAPH_TO  (graph, edge);
+	igraph_real_t weight=VECTOR(*weights)[edge];
+	if (from != to) {
+	  VECTOR(degree)[from] += weight;
+	  VECTOR(degree)[to] += weight;
+	}
+	IGRAPH_EIT_NEXT(edgeit);
+      }
+
+      for (i=0; i<no_of_nodes; i++) {
+	MATRIX(*res, i, i) = VECTOR(degree)[i] > 0 ? 1 : 0;
+      }
+      
+      IGRAPH_EIT_RESET(edgeit);
+      while (!IGRAPH_EIT_END(edgeit)) {
+	long int edge=IGRAPH_EIT_GET(edgeit);
+	long int from=IGRAPH_FROM(graph, edge);
+	long int to  =IGRAPH_TO  (graph, edge);
+	igraph_real_t weight=VECTOR(*weights)[edge];
+	if (from != to) {
+	  MATRIX(*res, from, to) = MATRIX(*res, to, from) = 
+	    -1.0 / sqrt(VECTOR(degree)[from] * VECTOR(degree)[to]);
+	}
+	IGRAPH_EIT_NEXT(edgeit);
+      }
+      
+    }
+
+  }
+
+  igraph_vector_destroy(&degree);
+  igraph_eit_destroy(&edgeit);
+  IGRAPH_FINALLY_CLEAN(2);
+
+  return 0;
+}
+
 /**
  * \function igraph_laplacian
  * \brief Returns the Laplacian matrix of a graph
@@ -47,6 +189,9 @@
  * \param res Pointer to an initialized matrix object, it will be
  *        resized if needed.
  * \param normalized Whether to create a normalized Laplacian matrix.
+ * \param weights An optional vector containing edge weights, to calculate 
+ *        the weighted Laplacian matrix. Set it to a null pointer to 
+ *        calculate the unweighted Laplacian.
  * \return Error code.
  *
  * Time complexity: O(|V||V|),
@@ -55,7 +200,8 @@
  */
 
 int igraph_laplacian(const igraph_t *graph, igraph_matrix_t *res,
-		     igraph_bool_t normalized) {
+		     igraph_bool_t normalized, 
+		     const igraph_vector_t *weights) {
   
   igraph_eit_t edgeit;
   long int no_of_nodes=igraph_vcount(graph);
@@ -64,6 +210,10 @@ int igraph_laplacian(const igraph_t *graph, igraph_matrix_t *res,
   igraph_integer_t ffrom, fto;
   igraph_vector_t degree;  
   int i;
+
+  if (weights) { 
+    return igraph_i_weighted_laplacian(graph, res, normalized, weights);
+  }
 
   IGRAPH_CHECK(igraph_matrix_resize(res, no_of_nodes, no_of_nodes));
   igraph_matrix_null(res);
@@ -101,7 +251,7 @@ int igraph_laplacian(const igraph_t *graph, igraph_matrix_t *res,
 	from=ffrom; to=fto;
 	if (from != to) {
 	  MATRIX(*res, from, to) = 
-	    -1.0 / sqrt(VECTOR(degree)[from] * VECTOR(degree)[to]);
+	    -1.0 / sqrt(VECTOR(degree)[from]);
 	}
 	IGRAPH_EIT_NEXT(edgeit);
       }
